Move `PrepareRelease` to JDK 17
And make proper use of the `Files` API.